<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.test_task.auth.FirebaseAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="250dp"
        android:layout_marginVertical="450dp"
        app:menu="@menu/overflow_menu"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/auth_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"
            android:text="@string/auth_email_label_text"
            app:layout_constraintBottom_toTopOf="@+id/auth_email_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/auth_email_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/auth_email_text_hint"
            app:layout_constraintBottom_toTopOf="@+id/auth_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_email_label" />

        <TextView
            android:id="@+id/auth_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"
            android:text="@string/auth_password_label_text"
            app:layout_constraintBottom_toTopOf="@+id/auth_password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_email_text" />

        <EditText
            android:id="@+id/auth_password_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password_text_hint"
            app:layout_constraintBottom_toTopOf="@+id/auth_remember_me_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_password_label" />

        <CheckBox
            android:id="@+id/auth_remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_remember_me_checkbox_text"
            app:layout_constraintBottom_toTopOf="@id/auth_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_password_text" />

        <Button
            android:id="@+id/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_remember_me_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>